--- a/index.html
+++ b/index.html
@@ -1,38 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="header">
-        <div class="header-logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Odin Landing Page</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header-container">
+        <div class="header">
+          <div class="header-logo">
             <h1>Header Logo</h1>
-        </div>
-        <div class="header-links">
+          </div>
+          <div class="header-links">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+              <li>header link one</li>
+              <li>header link two</li>
+              <li>header link three</li>
             </ul>
+          </div>
         </div>
-    </div>
-    <div class="banner">
-
-    </div>
-    <div class="quote">
-
-    </div>
-    <div class="call-to-action-container">
-        <div class="call-to-action">
-
+      </div>
+      <div class="content">
+        <div class="banner-container">
+          <div class="banner">
+            <div class="banner-text">
+              <h1>Lorem ipsum dolor sit.</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                perspiciatis, rerum velit officiis voluptatibus atque ut numquam
+                ducimus quidem consequuntur?
+              </p>
+              <button>Lorem, ipsum.</button>
+            </div>
+            <div class="banner-image-placeholder">
+              <p>This is a placeholder image</p>
+            </div>
+          </div>
         </div>
+        <div class="information-container">
+          <div class="information">
+            <a class="card">
+              <div class="frame"></div>
+              <div class="subtext">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </div>
+            </a>
+            <a class="card">
+              <div class="frame"></div>
+              <div class="subtext">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </a>
+            <a class="card">
+              <div class="frame"></div>
+              <div class="subtext">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </a>
+            <a class="card">
+              <div class="frame"></div>
+              <div class="subtext">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="quote-container">
+          <div class="quote">
+            <div class="quote-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos inventore consequuntur explicabo, saepe rerum fuga?
+              </p>
+            </div>
+            <div class="quotee">
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+        <div class="call-to-action-container">
+          <div class="call-to-action">
+            <div class="call-to-action-text">
+              <h1>Lorem ipsum dolor sit amet.</h1>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita, eaque?
+              </p>
+            </div>
+            <div class="call-to-action-button">
+              <button>Lorem, ipsum.</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+          ipsam?
+        </p>
+      </div>
     </div>
-    <div class="footer">
-        <p>Created by: Huderon</p>
-    </div>
-</body>
+  </body>
 </html>
